[gd_scene load_steps=4 format=3 uid="uid://bqes8l8rei7do"]

[ext_resource type="Script" path="res://scenes/level_editor/assets/items/menu/items.gd" id="1_r5hci"]
[ext_resource type="PackedScene" uid="uid://c32ax83ybum6y" path="res://scenes/level_editor/assets/items/menu/item_selector/item_selector.tscn" id="2_2r2ev"]
[ext_resource type="PackedScene" uid="uid://dfprq3k47wt75" path="res://scenes/level_editor/assets/items/menu/items_settings/item_settings.tscn" id="3_wh2ot"]

[node name="ItemsMenu" type="HBoxContainer"]
size_flags_vertical = 6
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 10
script = ExtResource("1_r5hci")

[node name="ItemSelection" parent="." instance=ExtResource("2_2r2ev")]
layout_mode = 2

[node name="ItemSettings" parent="." instance=ExtResource("3_wh2ot")]
layout_mode = 2

[connection signal="chose_item" from="ItemSelection" to="." method="_on_choose_item"]
[connection signal="item_settings_changed" from="ItemSettings" to="." method="_on_item_settings_changed"]
[connection signal="item_settings_saved" from="ItemSettings" to="." method="_on_item_settings_saved"]
